# khinsider-scraper

./: .gitignore  flake.nix  pyproject.toml
.github/workflows/: build_nix.yml
khinsider_scraper/: __init__.py  __main__.py  cli.py  model.py  parse.py  parse_test.py  scrape.py
khinsider_scraper/tests/: album_with_cd.html  album_without_cd.html  letter_with_seek.html  letter_without_seek.html  song.html
tests/: album.html  root.html  song.html
